2009-03-13  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile:
	* configure: Add make stubs.

2009-03-12  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextTemplating.Tests:
	* MonoDevelop.AspNet.Mvc.sln: Add tests.

2009-03-09  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.AspNet.Mvc.sln: Added new TextTemplating addin.

2009-03-05  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.AspNet.Mvc.sln: Updated.

2009-03-04  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextTemplating:
	* MonoDevelop.AspNet.Mvc.sln: Move T4 implementation to its
	  own assembly. Tweak some appdomain stuff.

	* TextTransform: Stub out the command-line TextTransform tool.

2009-02-26  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.AspNet.Mvc.sln: Flush.

2009-02-25  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.AspNet.Mvc.sln: Set policies. Remove unused name
	  attribute.
